# docs2cms

./: .gitignore  CLAUDE.md  README.md
python/: pyproject.toml
python/src/: .env.example
python/src/d2cms/: cli.py  config.py  docs.py  http.py  report.py  wordpress.py
python/tests/: test_cli.py  test_config.py  test_docs.py  test_wordpress.py
python/tests/cli/: conftest.py  test_cmd_add_doc.py  test_cmd_deprecate.py  test_cmd_sync.py
python/tests/config/: test_getenv_required.py  test_load_config_from_env.py  test_normalize_api_root.py
python/tests/docs/: _constants.py  test_content_type_from_path.py  test_frontmatter.py  test_generate_doc_hash.py  test_generate_template_doc.py  test_read_directory.py  test_reparent_and_relocate.py  test_to_html.py  test_update_frontmatter.py
python/tests/wordpress/: _helpers.py  conftest.py  test_find_parent_id.py  test_get_or_create_tag_ids.py  test_handle_delete.py  test_sync.py  test_sync_directory.py  test_sync_document.py
sample-docs/: parent-document.md
sample-docs/docs/: formatting.md  parent-document.md
sample-docs/docs/parent-document/: another-child.md  first-child.md
sample-docs/docs/parent-document/first-child/: nested-child.md
sample-docs/pages/: sample-page.md
sample-docs/pages/sample-page/: child-page.md
sample-docs/parent-document/: another-child.md  first-child.md
sample-docs/parent-document/first-child/: nested-child.md
sample-docs/posts/: sample-post.md
test-docs/: docs.md
test-docs/samples/: formatting.md
test-docs/samples/formatting/: another-child.md  nested-child.md
wordpress/: docker-compose.yml
wordpress/mu-plugins/: d2cms-auth.php  d2cms-docs.php
